--- a/Kitodo/src/main/webapp/pages/BenutzerBearbeitenPopupProjekte.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzerBearbeitenPopupProjekte.xhtml
@@ -34,7 +34,7 @@
                                     tooltip="true"/>
 
                         <!-- Data table for projects -->
-                        <p:dataTable var="project" value="#{ProjekteForm.projects}" rows="10" paginator="true">
+                        <p:dataTable var="project" value="#{BenutzerverwaltungForm.projects}" rows="10" paginator="true">
                             <p:column headerText="#{msgs.projekt}">
                                 <h:outputText value="#{project.title}"/>
                             </p:column>
