Fix redirecting for creation of new process out of template

--- a/Kitodo/src/main/webapp/pages/NewProcess/Page3.xhtml
+++ b/Kitodo/src/main/webapp/pages/NewProcess/Page3.xhtml
@@ -99,7 +99,7 @@
                                                         </h:commandLink>
 
                                                         <h:commandLink id="utid22"
-                                                                       action="ProzessverwaltungBearbeiten">
+                                                                       action="#{ProzessverwaltungForm.editProcess}">
                                                             <t:updateActionListener
                                                                     property="#{ProzessverwaltungForm.process}"
                                                                     value="#{ProzesskopieForm.prozessKopie}"/>
