--- a/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Batches/batch_box_Details.xhtml
@@ -141,24 +141,33 @@
             </table>
         </td>
         <td>
-            <h:form id="htmleditorform">
-                <h:inputText id="myTextArea" value="#{AktuelleSchritteForm.batchHelper.wikiField}" style="width: 50%"/>
-            </h:form>
-            <h:form id="addToWikiForm"
-                    rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingUser.id == LoginForm.myBenutzer.id}">
-                <h:panelGrid>
-                    <h:panelGroup>
-                        <h:inputText id="addToTextArea" value="#{AktuelleSchritteForm.batchHelper.addToWikiField}"
-                                     style="width: 100%"/>
-                    </h:panelGroup>
-                    <h:panelGroup>
-                        <h:commandButton value="#{msgs.nachrichtHinzufuegen}"
-                                         action="#{AktuelleSchritteForm.batchHelper.addToWikiField}"/>
-                        <h:commandButton value="#{msgs.nachrichtHinzufuegenForAll}"
-                                         action="#{AktuelleSchritteForm.batchHelper.addToWikiFieldForAll}"/>
-                    </h:panelGroup>
-                </h:panelGrid>
-            </h:form>
+
+            <table>
+                <tr>
+                    <td style="border: 1px solid lightgray; height: 100px;">
+                        <h:outputText escape="false" value="#{AktuelleSchritteForm.batchHelper.wikiField}" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h:form id="addToWikiForm"
+                                rendered="#{AktuelleSchritteForm.batchHelper.currentStep.processingUser.id == LoginForm.myBenutzer.id}">
+                            <h:panelGrid>
+                                <h:panelGroup>
+                                    <h:inputText id="addToTextArea" value="#{AktuelleSchritteForm.batchHelper.addToWikiField}"
+                                                 style="width: 100%"/>
+                                </h:panelGroup>
+                                <h:panelGroup>
+                                    <h:commandButton value="#{msgs.nachrichtHinzufuegen}"
+                                                     action="#{AktuelleSchritteForm.batchHelper.addToWikiField}"/>
+                                    <h:commandButton value="#{msgs.nachrichtHinzufuegenForAll}"
+                                                     action="#{AktuelleSchritteForm.batchHelper.addToWikiFieldForAll}"/>
+                                </h:panelGroup>
+                            </h:panelGrid>
+                        </h:form>
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
     </table>
