Update project save button

--- a/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditDetail.xhtml
@@ -41,7 +41,7 @@
             </div>
             <div>
                 <h:outputText value="#{msgs.projectIsArchived}" />
-                <p:selectBooleanCheckbox value="aktiv" />
+                <p:selectBooleanCheckbox value="#{ProjekteForm.myProjekt.projectIsArchived}" />
             </div>
         </p:row>
     </p:panelGrid>
