--- a/Kitodo/src/main/webapp/pages/projectEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEdit.xhtml
@@ -14,6 +14,7 @@
 <ui:composition
         template="/WEB-INF/templates/base.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
@@ -21,22 +22,24 @@
         <f:viewAction action="#{ProjekteForm.loadProject}"/>
     </f:metadata>
     <ui:define name="content">
-        <p:panel id="listWrapper" style="width: 95%; margin: auto; border-radius: 5px; padding: 0;">
-            <p:panel style="text-align: left; position: relative; padding: 5px;">
-                <h3 style="display: inline;">Projekt bearbeiten</h3>
-                <p:button value="#{msgs.speichern}" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-floppy-o fa-lg"/>
+        <h:form id="projectEditForm">
+            <p:panel id="listWrapper" style="width: 95%; margin: auto; border-radius: 5px; padding: 0;">
+                <p:panel style="text-align: left; position: relative; padding: 5px;">
+                    <h3 style="display: inline;">Projekt bearbeiten</h3>
+                    <h:commandButton value="#{msgs.speichern}" action="#{ProjekteForm.save()}" style="right: 5px; bottom: 5px; position: absolute;" icon="fa fa-floppy-o fa-lg"/>
+                </p:panel>
+                <p:tabView>
+                    <p:tab title="#{msgs.details}">
+                        <ui:include src="projectEditDetail.xhtml"/>
+                    </p:tab>
+                    <p:tab title="#{msgs.technischeDaten}">
+                        <ui:include src="projectEditSpecification.xhtml"/>
+                    </p:tab>
+                    <p:tab title="#{msgs.metsParamater}">
+                        <ui:include src="projectEditMets.xhtml"/>
+                    </p:tab>
+                </p:tabView>
             </p:panel>
-            <p:tabView>
-                <p:tab title="#{msgs.details}">
-                    <ui:include src="projectEditDetail.xhtml"/>
-                </p:tab>
-                <p:tab title="#{msgs.technischeDaten}">
-                    <ui:include src="projectEditSpecification.xhtml"/>
-                </p:tab>
-                <p:tab title="#{msgs.metsParamater}">
-                    <ui:include src="projectEditMets.xhtml"/>
-                </p:tab>
-            </p:tabView>
-        </p:panel>
+        </h:form>
     </ui:define>
 </ui:composition>
